story 11 incomplete mais la story 12 fini et debut de la doc

--- a/ProjetDepart/css/styles.css
+++ b/ProjetDepart/css/styles.css
@@ -283,3 +283,11 @@ a img {
   margin-top: 25px;
   width: 20px;
 }
+
+/* Disable */
+.disabled{
+  cursor:not-allowed;
+}
+.disabled:active{
+  pointer-events: none;
+}
