--- a/ProjetDepart/form.css
+++ b/ProjetDepart/form.css
@@ -61,6 +61,14 @@ form {
     outline: none;
 }
 
+p{
+    font-size: small;
+    margin: 0%;
+    padding: 0%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color:crimson;
+    display: none;
+}
 
 /* Button */
 #buttons {
